samples/_failures_safe/1761295602_b355e7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d5386c07.c: In function ‘main’:
./samples/SAFE/__tmp_d5386c07.c:139:12: error: missing terminating " character
  139 |     printf("\nRunning Dijk
      |            ^~~~~~~~~~~~~~~
./samples/SAFE/__tmp_d5386c07.c:139:5: error: expected expression at end of input
  139 |     printf("\nRunning Dijk
      |     ^~~~~~
./samples/SAFE/__tmp_d5386c07.c:139:5: error: expected declaration or statement at end of input
